--- a/CHANGES
+++ b/CHANGES
@@ -13,7 +13,7 @@
   fixed regex LINEEND condition
   add .size directive to i386 syscalls
   shove a few more bytes off the i386 socket calls
-  setjmp.longjmp and clone is now implemented but not tested (Olaf)
+  setjmp, longjmp and clone for x86_64 are now implemented but not tested (Olaf)
 
 0.20:
   calloc was botched
