--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@
   fix netinet/ip_icmp.h (Rui Prior)
   make strings.h susv3 compliant (Gunnar Ritter)
   remove stdio dependence in abort
+  fix truncate64, ftruncate64 (Luc Van Oostenryck and Yuri Kozlov)
 
 0.21:
   use gcc's size_t, ptrdiff_t and wchar_t types (Olaf)
