fix realpath for non-existant directories (Gergely Nagy and Gerrit Pape)

--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@
   remove stdio dependence in abort
   fix truncate64, ftruncate64 (Luc Van Oostenryck and Yuri Kozlov)
   fix and improve erand48() (Luc Van Oostenryck)
+  fix realpath for non-existant directories (Gergely Nagy and Gerrit Pape)
 
 0.21:
   use gcc's size_t, ptrdiff_t and wchar_t types (Olaf)
