--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@
   fix truncate64, ftruncate64 (Luc Van Oostenryck and Yuri Kozlov)
   fix and improve erand48() (Luc Van Oostenryck)
   fix realpath for non-existant directories (Gergely Nagy and Gerrit Pape)
+  fix DNS timeout and IPv6 socket reuse
 
 0.21:
   use gcc's size_t, ptrdiff_t and wchar_t types (Olaf)
