Gwenole found and fixed a bug in x86_64 unified.S cycles was also quite broken (only worked without optimizer and only counted the lower 32-bit of the cycles). Gwenole also said that regex now works on x86_64, maybe it was a compiler bug.

--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@
   add killpg prototype (Luc Van Oostenryck)
   remove some compiler warnings (Luc Van Oostenryck)
   better rand() from Knuth's TAOCP (Luc Van Oostenryck)
+  fix unified x86_64 unified syscall 64-bit return value issue (Gwenole)
 
 0.21:
   use gcc's size_t, ptrdiff_t and wchar_t types (Olaf)
