fix ia64 start code

--- a/CHANGES
+++ b/CHANGES
@@ -16,6 +16,7 @@
   the getdents64 emulation was broken and repairing it opened a can of
     worms.  So I ripped it out.  I also changed the readdir64 emulation
     to work if there is no getdents64.
+  fix ia64 start.S (Thanks to Volker Birk for an account on his ia64 box)
 
 0.21:
   use gcc's size_t, ptrdiff_t and wchar_t types (Olaf)
