--- a/CHANGES
+++ b/CHANGES
@@ -18,6 +18,8 @@
     to work if there is no getdents64.
   fix ia64 start.S (Thanks to Volker Birk for an account on his ia64 box)
   many ia64 fixes (waitpid, nice, fork, vfork, time, utime ...)
+  More fixes from Gwenole (printf %p only printed the last 32 bits, I
+    botched the getdents64 #ifdefs, we violated the x86_64 ABI)
 
 0.21:
   use gcc's size_t, ptrdiff_t and wchar_t types (Olaf)
