--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,7 @@
   many ia64 fixes (waitpid, nice, fork, vfork, time, utime ...)
   More fixes from Gwenole (printf %p only printed the last 32 bits, I
     botched the getdents64 #ifdefs, we violated the x86_64 ABI)
+  change signal() to do as glibc does
 
 0.21:
   use gcc's size_t, ptrdiff_t and wchar_t types (Olaf)
