--- a/CHANGES
+++ b/CHANGES
@@ -22,6 +22,8 @@
     botched the getdents64 #ifdefs, we violated the x86_64 ABI)
   change signal() to do as glibc does
   remove a few more warnings
+  add new 2.5 syscall #defines
+  add epoll_create, epoll_ctl and epoll_wait
 
 0.21:
   use gcc's size_t, ptrdiff_t and wchar_t types (Olaf)
