two printf fixes (Gernot Tenchio)

--- a/CHANGES
+++ b/CHANGES
@@ -30,6 +30,7 @@
     the instruction before the syscall to be a load immediate)
   fix fread() from a pipe (oops, tried to lseek)
   #define _POSIX_VDISABLE in termios.h (Laurent Bercot)
+  two *printf fixes (Gernot Tenchio)
 
 0.21:
   use gcc's size_t, ptrdiff_t and wchar_t types (Olaf)
