optimize assert slightly (use expect())

--- a/CHANGES
+++ b/CHANGES
@@ -33,6 +33,7 @@
   two *printf fixes (Gernot Tenchio)
   add nan and +-inf handling in __dtostr
   add _SC_NGROUPS_MAX support to sysconf (Felix J. Ogris)
+  make assert() use expect(), slight optimization
 
 0.21:
   use gcc's size_t, ptrdiff_t and wchar_t types (Olaf)
