fix SA_NODEFER on sparc, make prefix ?= instead of =

--- a/CHANGES
+++ b/CHANGES
@@ -35,6 +35,7 @@
   add _SC_NGROUPS_MAX support to sysconf (Felix J. Ogris)
   make assert() use expect(), slight optimization
   add i386 vfork (Thomas Ogrisegg)
+  fix SA_NODEFER on sparc (Gerrit Pape, Thomas Bader)
 
 0.21:
   use gcc's size_t, ptrdiff_t and wchar_t types (Olaf)
