fix sin, cos and __dtostr (Gernot Tenchio) sadly, printf is still broken (try printf("%g",0.0))

--- a/CHANGES
+++ b/CHANGES
@@ -36,6 +36,7 @@
   make assert() use expect(), slight optimization
   add i386 vfork (Thomas Ogrisegg)
   fix SA_NODEFER on sparc (Gerrit Pape, Thomas Bader)
+  fix sin, cos and __dtostr (Gernot Tenchio)
 
 0.21:
   use gcc's size_t, ptrdiff_t and wchar_t types (Olaf)
