--- a/CHANGES
+++ b/CHANGES
@@ -38,6 +38,7 @@
   fix SA_NODEFER on sparc (Gerrit Pape, Thomas Bader)
   fix sin, cos and __dtostr (Gernot Tenchio)
   add /dev/epoll ioctl constants to sys/ioctl.h
+  add linux/eventpoll.h for /dev/epoll
 
 0.21:
   use gcc's size_t, ptrdiff_t and wchar_t types (Olaf)
