fix lseek64 on 64-bit platforms

--- a/CHANGES
+++ b/CHANGES
@@ -39,6 +39,7 @@
   fix sin, cos and __dtostr (Gernot Tenchio)
   add /dev/epoll ioctl constants to sys/ioctl.h
   add linux/eventpoll.h for /dev/epoll
+  fix lseek64 on 64-bit architectures
 
 0.21:
   use gcc's size_t, ptrdiff_t and wchar_t types (Olaf)
