fix regfree (Uwe Ohse)

--- a/CHANGES
+++ b/CHANGES
@@ -44,6 +44,7 @@
     fixing some broken macros in sparc32-code (.udiv,.urem)
     adding strndup (GNU Extension)
   fix glob strncpy (R.L. Horn)
+  fix regfree (Uwe Ohse)
 
 0.21:
   use gcc's size_t, ptrdiff_t and wchar_t types (Olaf)
