allow more than 64k in i386 memchr (Karsten Scheibler)

--- a/CHANGES
+++ b/CHANGES
@@ -47,6 +47,7 @@
   fix regfree (Uwe Ohse)
   fix puts in full stdio mode (would omit \n)
   fix wrong types on powerpc, broke *stat (Gerrit Pape)
+  allow more than 64k in i386 memchr (Karsten Scheibler)
 
 0.21:
   use gcc's size_t, ptrdiff_t and wchar_t types (Olaf)
