--- a/CHANGES
+++ b/CHANGES
@@ -49,6 +49,7 @@
   fix wrong types on powerpc, broke *stat (Gerrit Pape)
   allow more than 64k in i386 memchr (Karsten Scheibler)
   make strftime work it WANT_TZFILE_PARSER is not set (Gwenole Beauchesne)
+  build parisc on parisc64, change libgcc link order on sparc (Gerrit Pape)
 
 0.21:
   use gcc's size_t, ptrdiff_t and wchar_t types (Olaf)
