--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 0.23:
   update sys/soundcard.h
   various x86_64 fixes (Gwenole Beauchesne)
+  fix assert for 64-bit platforms (Gwenole Beauchesne)
 
 0.22:
   fix i386 libm
