add ctermid and ftok (now perl should compile) add some more linker warnings (we sure are accumulating lots of junk)

--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,7 @@
   forward poll.h to sys/poll.h
   make DNS socket close-on-exec (Felix J. Ogris)
   add cuserid to libcompat (Andreas Krennmair)
+  add ctermid and ftok to libcompat (those are _really_ ugly)
 
 0.22:
   fix i386 libm
