--- a/CHANGES
+++ b/CHANGES
@@ -16,6 +16,7 @@
     diet libc...?
   make declaration of writev and readv match susv3
   add finite (Andreas Krennmair)
+  move flock+constants to unistd.h (the Linux man page is wrong on this)
 
 0.22:
   fix i386 libm
