more math fixes (Ruby now compiles and works)

--- a/CHANGES
+++ b/CHANGES
@@ -18,6 +18,7 @@
   add finite (Andreas Krennmair)
   move flock+constants to unistd.h (the Linux man page is wrong on this)
   fix assert (Andreas Krennmair)
+  add modf, libm fixes (Andreas Krennmair)
 
 0.22:
   fix i386 libm
