utmp x86_64 biarch support (Gwenole Beauchesne)

--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,7 @@
   fix assert (Andreas Krennmair)
   add modf, libm fixes (Andreas Krennmair)
   rename __pure__ to __pure (Laurent Bercot)
+  utmp x86_64 biarch support (Gwenole Beauchesne)
 
 0.22:
   fix i386 libm
