make the vsyscall support work on 2.4 kernels...

--- a/CHANGES
+++ b/CHANGES
@@ -24,6 +24,7 @@
   add fgetpwent (Alvaro Gomes Sobral Barcellos)
   add vsyscall support for linux 2.5 on recent CPUs
   add a few new 2.5 syscalls, adapt to renamed epoll syscalls
+  Olaf: fixing the vsyscall support so that the binaries still work on 2.4
 
 0.22:
   fix i386 libm
