--- a/CHANGES
+++ b/CHANGES
@@ -26,6 +26,7 @@
   add a few new 2.5 syscalls, adapt to renamed epoll syscalls
   Olaf: fixing the vsyscall support so that the binaries still work on 2.4
   remove getline macro, caused problems with GNU sed
+  make assert equal (void)0 under -DNDEBUG (Enrico Scholz)
 
 0.22:
   fix i386 libm
