--- a/CHANGES
+++ b/CHANGES
@@ -41,6 +41,8 @@
     - sparc/sparc64: shrink of the unified syscall and the special syscalls
       (fork/pipe) to use the "unified_syscall_error_handler"
   add sendfile64 backwards compatibility glue
+  add __attribute_dontuse__ to declare a few functions as deprecated
+  use above to flag a few BSDisms ;-)
 
 0.22:
   fix i386 libm
