--- a/CHANGES
+++ b/CHANGES
@@ -44,6 +44,7 @@
   add __attribute_dontuse__ to declare a few functions as deprecated
   use above to flag a few BSDisms ;-)
   include <sys/cdefs.h> in errno.h, fixes __attribute_dontuse__ breakage
+  endmntent now returns 1 (Florian Westphal)
 
 0.22:
   fix i386 libm
