fixing the diet wrapper for sparc and changing the options for mips

--- a/CHANGES
+++ b/CHANGES
@@ -46,6 +46,7 @@
   include <sys/cdefs.h> in errno.h, fixes __attribute_dontuse__ breakage
   endmntent now returns 1 (Florian Westphal)
   strtoul return value fixes (Jan Bobrowski)
+  Olaf: fixing the diet wrapper for sparc and changing the options for mips
 
 0.22:
   fix i386 libm
