--- a/CHANGES
+++ b/CHANGES
@@ -48,6 +48,7 @@
   strtoul return value fixes (Jan Bobrowski)
   Olaf: fixing the diet wrapper for sparc and changing the options for mips
   fix i386/atol (Hynek Schlawack)
+  fix i386/copysign (Hynek Schlawack)
 
 0.22:
   fix i386 libm
