--- a/CHANGES
+++ b/CHANGES
@@ -47,8 +47,7 @@
   endmntent now returns 1 (Florian Westphal)
   strtoul return value fixes (Jan Bobrowski)
   Olaf: fixing the diet wrapper for sparc and changing the options for mips
-  fix i386/atol (Hynek Schlawack)
-  fix i386/copysign (Hynek Schlawack)
+  a few i386/*.S fixes (Hynek Schlawack)
   remove =0 for static variables (Thomas Ogrisegg)
 
 0.22:
