RPC 64-bit fixes from Gwenole DNS case insensitivity fix by Thomas

--- a/CHANGES
+++ b/CHANGES
@@ -52,6 +52,8 @@
   fix strtoul (broke getaddrinfo and ssh)
   fix segfault in parser
   Olaf: checkin of the new libpthread implementation & added confstr
+  Make gethostbyname2 case insensitive (Thomas Ogrisegg)
+  RPC 64-bit cleanliness fixes (Gwenole Beauchesne)
 
 0.22:
   fix i386 libm
