first throw, then attributes (Andreas Jabs)

--- a/CHANGES
+++ b/CHANGES
@@ -61,6 +61,7 @@
   try to add sigcontext and ucontext for x86_64
   add ffs, ffsl, ffsll
   Olaf: fxing the error sting list and sparc bug (Gerrit Pape)
+  first throw, then attributes (Andreas Jabs)
 
 0.22:
   fix i386 libm
