document fputc bug

--- a/CHANGES
+++ b/CHANGES
@@ -62,6 +62,7 @@
   add ffs, ffsl, ffsll
   Olaf: fxing the error sting list and sparc bug (Gerrit Pape)
   first throw, then attributes (Andreas Jabs)
+  unbuffered fputc was broken on big endian (big oops, thanks Gerrit Pape)
 
 0.22:
   fix i386 libm
