add vasprintf for elinks

--- a/CHANGES
+++ b/CHANGES
@@ -64,6 +64,7 @@
   first throw, then attributes (Andreas Jabs)
   unbuffered fputc was broken on big endian (big oops, thanks Gerrit Pape)
   fix parisc struct stat (Gerrit Pape)
+  add vasprintf (for elinks)
 
 0.22:
   fix i386 libm
