--- a/CHANGES
+++ b/CHANGES
@@ -67,6 +67,7 @@
   add vasprintf (for elinks)
   fnmatch used [^e] instead of [!e] for negation (Heiko Berges)
   add sparc and parisc assembly routines (Thomas Ogrisegg)
+  add swab (Johannes Stezenbach)
 
 0.22:
   fix i386 libm
