fixed a libdl ref-counter bug (Thomas Walpuski)

--- a/CHANGES
+++ b/CHANGES
@@ -69,6 +69,7 @@
   add sparc and parisc assembly routines (Thomas Ogrisegg)
   add swab (Johannes Stezenbach)
   make a{4} match exactly and not at least 4 times a (Ingo Oeser)
+  Olaf: fixed a libdl ref-counter bug (Thomas Walpuski)
 
 0.22:
   fix i386 libm
