--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@
     Unfortunately, correct overflow checking enlarged the routine by 20%.
     (reported by Manuel Novoa III)
   two stdio bug fixes (also reported by Manuel Novoa III)
+  remove several warnings (Johannes Stezenbach)
 
 0.23:
   update sys/soundcard.h
