--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@
     (reported by Manuel Novoa III)
   two stdio bug fixes (also reported by Manuel Novoa III)
   remove several warnings (Johannes Stezenbach)
+  Olaf: fixing tmpfile (missing parameter) and __dtostr (gcc 2.95)
 
 0.23:
   update sys/soundcard.h
