--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@
   two stdio bug fixes (also reported by Manuel Novoa III)
   remove several warnings (Johannes Stezenbach)
   Olaf: fixing tmpfile (missing parameter) and __dtostr (gcc 2.95)
+  Olaf: add the pthread-semaphore support.
 
 0.23:
   update sys/soundcard.h
