add debugged parisc strlen.S (Michael Mueller) fix typo in parisc setjmp.S (Michael Mueller)

--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,7 @@
   Olaf: add the pthread-semaphore support.
   implemented experimental plug-and-play IPv6 DNS
     (see dietfeatures.h, see http://www.fefe.de/ipv6pnpdns.html)
+  typo in parisc setjmp.S (Michael Mueller)
 
 0.23:
   update sys/soundcard.h
