fixing the pthread_join function minor of the thread_specific data handling

--- a/CHANGES
+++ b/CHANGES
@@ -11,6 +11,7 @@
   implemented experimental plug-and-play IPv6 DNS
     (see dietfeatures.h, see http://www.fefe.de/ipv6pnpdns.html)
   typo in parisc setjmp.S (Michael Mueller)
+  Olaf: fixing the pthread_join function
 
 0.23:
   update sys/soundcard.h
