--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,8 @@
   Olaf: fixing the pthread_join function
   add IPv6 link-local%eth0 support to getaddrinfo
   Olaf: added missing syscalls (cap{g,s}et) and addmntent
+  Add s390x and ppc64 support (Marian Jancar, SuSE)
+  Marian also contributed %m support to printf, and fixes for many bugs
 
 0.23:
   update sys/soundcard.h
@@ -193,7 +195,7 @@
   add libm2.s from contrib to i386 (oops, how long has it been sitting
     there?)
   add truncate64 and ftruncate64 and prototype for truncate (only had ftruncate)
-  Michal Ludvig ported the diet libc to the x86_64 architecture (the
+  Michal Ludvig (SuSE) ported the diet libc to the x86_64 architecture (the
     upcoming AMD Hammer chips!).  You can't even buy the chips yet and
     the diet libc already supports it!  Amazing ;-)
   Michal's patch also fixed several of the outstanding warnings.  Thanks!
